# fastapi_crash_tasks_on

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
application/: repository.py  router.py
data/: database.py
myapp/: main.py
